Updated CSS to fix wrapping issue with "notify"
https://exclaimersupport.zendesk.com/agent/tickets/313874

--- a/style.css
+++ b/style.css
@@ -4785,13 +4785,21 @@ ul.home-categories__sub > li::before{
 /* Article Templates */
 
 .notify{
-  display: block;
+  display: inline-block;
   margin-top: 1em;
   margin-bottom: 1em;
   padding: 0.75em;
   font-size: 0.9em;
   border: 1px solid #dfe3ee;
   border-radius: 5px;
+}
+
+.notify-cb {
+  display: flex;
+}
+
+.notify p {
+  margin-bottom: 0;
 }
 
 .notify--info{
